core/unpackaged/main/default/objects/LoggerFieldMapping__mdt/LoggerFieldMapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure custom field mappings in Nebula Logger to map data between LogEntryEvent__e and the custom objects Log__c, LogEntry__c, and LoggerScenario__c</description>
    <label>Logger Field Mapping</label>
    <pluralLabel>Logger Field Mappings</pluralLabel>
</CustomObject>