core/unpackaged/main/default/objects/LoggerFieldMapping__mdt/fields/SourceField__c.field-meta.xml
<CustomField>
    <fullName>SourceField__c</fullName>
    <inlineHelpText>The source field containing the value to map to the target field. Any custom fields that you create on the source SObject type must by populated by your own code/customizations.</inlineHelpText>
    <label>Source Field</label>
    <metadataRelationshipControllingField>LoggerFieldMapping__mdt.SourceSObjectType__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Logger Source Field Mappings</relationshipLabel>
    <relationshipName>LoggerSourceFieldMappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>