core/unpackaged/main/default/objects/LoggerFieldMapping__mdt/fields/SourceSObjectType__c.field-meta.xml
<CustomField>
    <fullName>SourceSObjectType__c</fullName>
    <inlineHelpText>Only LogEntryEvent__e is supported as the Source SObject Type</inlineHelpText>
    <label>Source SObject Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Logger Source Field Mappings</relationshipLabel>
    <relationshipName>LoggerSourceFieldMappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>