core/unpackaged/main/default/objects/LoggerFieldMapping__mdt/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <inlineHelpText>The target field to populate with the value of the source field. The data type of this field must match the data type of the source field - mappings that use different/incompatible data types will be ignored, resulting in lost logging data.</inlineHelpText>
    <label>Target Field</label>
    <metadataRelationshipControllingField>LoggerFieldMapping__mdt.TargetSObjectType__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Logger Target Field Mappings</relationshipLabel>
    <relationshipName>LoggerTargetFieldMappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>