core/unpackaged/main/default/objects/LoggerFieldMapping__mdt/validationRules/UnsupportedSourceSObjectType.validationRule-meta.xml
<ValidationRule>
    <fullName>UnsupportedSourceSObjectType</fullName>
    <active>true</active>
    <errorConditionFormula>SourceSObjectType__r.DeveloperName != 'LogEntryEvent'</errorConditionFormula>
    <errorDisplayField>SourceSObjectType__c</errorDisplayField>
    <errorMessage>Only LogEntryEvent__e is supported as the Source SObject Type</errorMessage>
</ValidationRule>