core/unpackaged/main/default/objects/LoggerFieldMapping__mdt/validationRules/UnsupportedTargetSObjectType.validationRule-meta.xml
<ValidationRule>
    <fullName>UnsupportedTargetSObjectType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TargetSObjectType__r.DeveloperName != 'Log',
    TargetSObjectType__r.DeveloperName != 'LogEntry',
    TargetSObjectType__r.DeveloperName != 'LoggerScenario'
)</errorConditionFormula>
    <errorDisplayField>TargetSObjectType__c</errorDisplayField>
    <errorMessage>Only Log__c, LogEntry__c, and LoggerScenario__c are supported as the Target SObject Type</errorMessage>
</ValidationRule>