core/unpackaged/main/default/objects/LoggerFieldMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsEnabled__c</columns>
    <columns>SourceSObjectType__c</columns>
    <columns>SourceField__c</columns>
    <columns>TargetSObjectType__c</columns>
    <columns>TargetField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>